[gd_scene load_steps=3 format=3 uid="uid://blkwn2x3nt0ys"]

[ext_resource type="Script" path="res://game/entities/Lobby/Lobby.gd" id="1_lobby"]
[ext_resource type="TileSet" path="res://game/assets/Maps/Texture/dungeon_tileset.tres" id="2_tileset"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lobby_bounds"]
size = Vector2(800, 600)

[node name="Lobby" type="Node2D"]
script = ExtResource("1_lobby")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_tileset")
tile_map_data = PackedByteArray("AAABAAEAAAABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABATAAAAUAAQA=")

[node name="PlayerSpawn" type="Node2D" parent="."]
position = Vector2(0, 0)

[node name="LobbyBounds" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LobbyBounds"]
shape = SubResource("RectangleShape2D_lobby_bounds")

[connection signal="body_entered" from="LobbyBounds" to="." method="_on_lobby_bounds_body_entered"]
[connection signal="body_exited" from="LobbyBounds" to="." method="_on_lobby_bounds_body_exited"]
